#VERSION 0.8.4#

 - fixed method validate() of Peak_Filter_Advanced to manage $_data keyname not set

 - fixed method validate() of Peak_Filters_Advanced to throw exception when filter method is not found

 - fixed bug with Peak_View::setRenderEngine() and Partials render engine

 - deleted deprecated class Peak_Pattern

 - splited class Peak_FormValidation into Peak_Filters_Advanced and Peak_Filters_Form

 - simplified Peak_Filters and moved some code into Peak_Filters_Basic

 - deleted methods _filter_word() and filter_words() in favor of new method _filter_alpha() and _filter_alpha_num(), and added
   method getFiltersList() in Peak_FormValidation

 - added abstract class Peak_FormValidation

 - added methods _setError() and _regexp() to Peak_Filters

 - added methods getSanitizeFilters() and getValidateFilters() to Peak_Filters

 - added abstract class Peak_Filters

 - renamed constants _VERSION_, _NAME_ and _DESCR_ to PK_VERSION, PK_NAME and PK_DESCR


#VERSION 0.8.3#

 - added class Peak_Controller_Helper_Validate

 - modified Peak_Controller_Helpers to support peak library controller helpers too

 - added method exists() in Peak_View_Theme

 - deleted deprecated methods setOptions() and getOptions() in Peak_View_Theme 

 - fixed and renamed method folder() to setFolder() in Peak_View_Theme

 - added methods __construct() and _jsonError()(PHP 5.3) to Peak_Config_Json

 - added method postRender() in Peak_Controller_Front and fixed render() in Peak_Application

 - fixed method dispatch() of Peak_Controller_Front when dispatching the default controller 

 - added property $error_controller and method errorDispatch() in Peak_Controller_Front

 - deleted deprecated classes Peak_Core_Extension_Codegen, Peak_Core_Extension_Configs and Peak_Core_Extension_Lang

 - rewrited Peak_Codegen_Controller class to use Peak_Codegen_Class

 - rewrited Peak_Codegen_Bootstrap class to use Peak_Codegen_Class
