@@ -162,6 +162,11 @@ if(isset($_POST['create'])) {
 	//no errors, start creating app
 	//----------------------------------------------
 	if(empty($errors)) {
+	    
+	    
+	    /*if(substr($form['app_path'], -1, 1) === '/') $form['app_path'] = substr($form['app_path'], 0, -1);        
+        print_r($form);
+	    exit();*/
 		
 		$app_created = false;
 		$app_build_errors = array();
@@ -186,6 +191,15 @@ if(isset($_POST['create'])) {
 			$codegen->addAction('_initEnv');
 			$filepath = $form['app_path'].'/bootstrap.php';
 			if(!@file_put_contents($filepath, '<?php'.Peak_Codegen::LINE_BREAK.$codegen->preview())) {
+				$app_build_errors[] = 'Failed to create <code>'.$filepath.'</code>';
+			}
+		}
+		
+		//front controller
+		if($form['app_front'] === 'on') {
+		    $codegen = new Peak_Codegen_Front();
+		    $filepath = $form['app_path'].'/front.php';
+		    if(!@file_put_contents($filepath, '<?php'.Peak_Codegen::LINE_BREAK.$codegen->preview())) {
 				$app_build_errors[] = 'Failed to create <code>'.$filepath.'</code>';
 			}
 		}
@@ -239,23 +253,27 @@ if(isset($_POST['create'])) {
 				$codegen = new Peak_Codegen_Bootstrap();
 				$filepath = $modpath.'/bootstrap.php';
 				$codegen->name = $mod.'_Bootstrap';
-				if(!@file_put_contents($filepath, $codegen->preview())) {
+				if(!@file_put_contents($filepath, '<?php'.Peak_Codegen::LINE_BREAK.$codegen->preview())) {
 					$app_build_errors[] = 'Failed to create <code>'.$filepath.'</code>';
 				}
 				//print_r($paths);
 			}
 		}
 		
-		//creat public path and files
+		//create public path and files
 		if(!empty($form['public_path'])) {
 			if (!@mkdir($form['public_path'], 0, true)) {
 				$app_build_errors[] = 'Failed to create <code>'.$form['public_path'].'</code>';
 			}
 			if($form['public_index'] === 'on') {
-				
+				$codegen = new Peak_Codegen_Index();
+				$filepath = $form['public_path'].'/index.php';
+				if(!@file_put_contents($filepath, '<?php'.Peak_Codegen::LINE_BREAK.$codegen->preview())) {
+					$app_build_errors[] = 'Failed to create <code>'.$filepath.'</code>';
+				}
 			}
 			if($form['public_htaccess'] === 'on') {
-				$codegen = Peak_Codegen_Htaccess();
+				$codegen = new Peak_Codegen_Htaccess();
 				$codegen->env = 'development';
 				$filepath = $form['public_path'].'/.htaccess';
 				if(!@file_put_contents($filepath, $codegen->preview())) {
